v11/docs/ModelsCRLRequestModel.md
# ModelsCRLRequestModel

## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**CertificateAuthorityLogicalName** | **string** |  | 
**CertificateAuthorityHostName** | Pointer to **NullableString** |  | [optional] 

## Methods

### NewModelsCRLRequestModel

`func NewModelsCRLRequestModel(certificateAuthorityLogicalName string, ) *ModelsCRLRequestModel`

NewModelsCRLRequestModel instantiates a new ModelsCRLRequestModel object
This constructor will assign default values to properties that have it defined,
and makes sure properties required by API are set, but the set of arguments
will change when the set of required properties is changed

### NewModelsCRLRequestModelWithDefaults

`func NewModelsCRLRequestModelWithDefaults() *ModelsCRLRequestModel`

NewModelsCRLRequestModelWithDefaults instantiates a new ModelsCRLRequestModel object
This constructor will only assign default values to properties that have it defined,
but it doesn't guarantee that properties required by API are set

### GetCertificateAuthorityLogicalName

`func (o *ModelsCRLRequestModel) GetCertificateAuthorityLogicalName() string`

GetCertificateAuthorityLogicalName returns the CertificateAuthorityLogicalName field if non-nil, zero value otherwise.

### GetCertificateAuthorityLogicalNameOk

`func (o *ModelsCRLRequestModel) GetCertificateAuthorityLogicalNameOk() (*string, bool)`

GetCertificateAuthorityLogicalNameOk returns a tuple with the CertificateAuthorityLogicalName field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetCertificateAuthorityLogicalName

`func (o *ModelsCRLRequestModel) SetCertificateAuthorityLogicalName(v string)`

SetCertificateAuthorityLogicalName sets CertificateAuthorityLogicalName field to given value.


### GetCertificateAuthorityHostName

`func (o *ModelsCRLRequestModel) GetCertificateAuthorityHostName() string`

GetCertificateAuthorityHostName returns the CertificateAuthorityHostName field if non-nil, zero value otherwise.

### GetCertificateAuthorityHostNameOk

`func (o *ModelsCRLRequestModel) GetCertificateAuthorityHostNameOk() (*string, bool)`

GetCertificateAuthorityHostNameOk returns a tuple with the CertificateAuthorityHostName field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetCertificateAuthorityHostName

`func (o *ModelsCRLRequestModel) SetCertificateAuthorityHostName(v string)`

SetCertificateAuthorityHostName sets CertificateAuthorityHostName field to given value.

### HasCertificateAuthorityHostName

`func (o *ModelsCRLRequestModel) HasCertificateAuthorityHostName() bool`

HasCertificateAuthorityHostName returns a boolean if a field has been set.

### SetCertificateAuthorityHostNameNil

`func (o *ModelsCRLRequestModel) SetCertificateAuthorityHostNameNil(b bool)`

 SetCertificateAuthorityHostNameNil sets the value for CertificateAuthorityHostName to be an explicit nil

### UnsetCertificateAuthorityHostName
`func (o *ModelsCRLRequestModel) UnsetCertificateAuthorityHostName()`

UnsetCertificateAuthorityHostName ensures that no value is present for CertificateAuthorityHostName, not even an explicit nil

[[Back to Model list]](../README.md#documentation-for-models) [[Back to API list]](../README.md#documentation-for-api-endpoints) [[Back to README]](../README.md)


